# protocollo_comunicazione_uart_esp32-c3

./: .gitignore  CMakeLists.txt  LICENSE  README.md  da_cancellare_2  da_cancellare_2.c  info.h  platformio.ini  sdkconfig.defaults  sdkconfig.esp32-c3-devkitm-1  sdkconfig.freenove_esp32_s3_wroom
3d models/: molecube gopro mount.step  molecube gopro mount.stl  molecubes_arm.step  molecubes_bottom_half.step  molecubes_bottom_half.stl  molecubes_cover.step  molecubes_cover.stl  molecubes_top_half.step  molecubes_top_half.stl
MOCKUP_C++_OLD/comunicazione/: Cube.cpp  (+1 more)
cinematics/: CMakeLists.txt  platformio.ini
esp32-c3/: CMakeLists.txt  ex_task_creation.txt  partitions.csv  platformio.ini  sdkconfig.defaults  sdkconfig.esp32-c3-devkitm-1  tempCodeRunnerFile.c
esp32-s3/: sdkconfig.defaults
include/: msg_structs.h  utils.h  utils_communication.h
python client/: esp32_client.py
src/: CMakeLists.txt  commands.cpp  debug_print.cpp  handshake_and_report.cpp  led.cpp  main.c  main.cpp  structs.h  utils.h
src/communication/: GLOBAL_VARS.cpp  handle_report.cpp  handshake_and_report.cpp  init_communication.cpp  led.cpp  uart.cpp
src/comunication/: GLOBAL_VARS.cpp  commands.cpp  init_communication.cpp  init_comunication.cpp  led.cpp  uart.cpp
src/esp32-c3/: main.cpp
src/esp32-s3/: main.cpp
src/uart_code/: GLOBAL_VARS.cpp  bridge.cpp  bridge_wifi.cpp  commands.cpp  debug_print.cpp  handle_handshake.cpp  handle_report.cpp  handshake_and_report.cpp  init_communication.cpp  init_uart_comms.cpp  led.cpp  uart.cpp
src/wifi_code/: init_wifi.cpp  protocol_manager.cpp
(+62 files in other folders)
